k8s/overlays/dev/admin-env.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstack
spec:
  template:
    spec:
      containers:
        - name: bookstack
